--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -37,12 +37,12 @@ for (const post of posts) {
         class:list={['col-12', { 'sm:col-6 lg:col-3': !fluid || i > 0 }]}
       >
         {!hideMeta && (
-          <ul slot="meta" class="mt-2 mb-2 flex flex-wrap items-center text-text p-1">
-            <li class="mr-5">
+          <ul slot="meta" class="m-2 flex flex-wrap gap-2 items-center">
+            <li>
               {postAuthorsMap.get(post)!.map(author => (
                 <a
                   href={`/authors/${author.slug}`}
-                  class="flex items-center hover:text-primary font-medium"
+                  class="flex items-center hover:text-primary"
                 >
                   {author.data.image && (
                     <Image
@@ -57,18 +57,18 @@ for (const post of posts) {
                 </a>
               ))}
             </li>
-            <li class="mr-5 flex items-center flex-wrap font-medium">
-              <BiCalendarEdit className="mr-1 h-5 w-5 text-gray-600" />
+            <li class="flex items-center gap-1">
+              <BiCalendarEdit />
               {dateFormat(post.data.date)}
             </li>
-            <li class="mr-5 flex items-center flex-wrap">
-              <BiCategoryAlt className="mr-1 h-[18px] w-[18px] text-gray-600" />
+            <li class="flex items-center gap-1">
+              <BiCategoryAlt />
               <ul>
                 {post.data.categories.map((category: string, i: number) => (
                   <li class="inline-block">
                     <a
                       href={`/categories/${slugify(category)}`}
-                      class="mr-2 hover:text-primary font-medium"
+                      class="mr-2 hover:text-primary"
                     >
                       {humanize(category)}{i !== post.data.categories.length - 1 && ','}
                     </a>
