--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -33,7 +33,7 @@ const { title, meta_title, description, image, noindex, canonical } = Astro.prop
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
     <!-- theme meta -->
-    <meta name="theme-name" content="bookworm-light-astro-v4" />
+    <meta name="theme-name" content="bookworm-blight-astro" />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta
       name="theme-color"
