--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,27 +17,33 @@ const { address, email, phone } = config.contactinfo;
         <div class="sm:col-5 md:col-4">
           <p class="mb-8 text-2xl font-bold text-theme-dark">Contact Info</p>
           <ul class="flex flex-col space-y-8">
-            <li>
-              <div class="flex text-theme-dark items-center text-xl">
-                <FaAddressCard className="mr-3 text-primary" />
-                <p class="font-semibold">Address</p>
-              </div>
-              <p set:html={markdownify(address)} class="mt-2 leading-5 pl-8" />
-            </li>
-            <li>
-              <div class="flex text-theme-dark items-center text-xl">
-                <FaEnvelope className="mr-3 text-primary" />
-                <p class="font-semibold">Email</p>
-              </div>
-              <p set:html={markdownify(email)} class="mt-2 leading-5 pl-8 content" />
-            </li>
-            <li>
-              <div class="flex text-theme-dark items-center text-xl">
-                <FaPhoneAlt className="mr-3 text-primary" />
-                <p class="font-semibold">Phone</p>
-              </div>
-              <p set:html={markdownify(phone)} class="mt-2 leading-5 pl-8" />
-            </li>
+            { address && (
+              <li>
+                <div class="flex text-theme-dark items-center text-xl">
+                  <FaAddressCard className="mr-3 text-primary" />
+                  <p class="font-semibold">Address</p>
+                </div>
+                <p set:html={markdownify(address)} class="mt-2 leading-5 pl-8" />
+              </li>
+            )}
+            { email && (
+              <li>
+                <div class="flex text-theme-dark items-center text-xl">
+                  <FaEnvelope className="mr-3 text-primary" />
+                  <p class="font-semibold">Email</p>
+                </div>
+                <p set:html={markdownify(email)} class="mt-2 leading-5 pl-8" />
+              </li>
+            )}
+            { phone && (
+              <li>
+                <div class="flex text-theme-dark items-center text-xl">
+                  <FaPhoneAlt className="mr-3 text-primary" />
+                  <p class="font-semibold">Phone</p>
+                </div>
+                <p set:html={markdownify(phone)} class="mt-2 leading-5 pl-8" />
+              </li>
+            )}
           </ul>
         </div>
         <div class="sm:col-7 md:col-8">
