Remove .content class.

--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -33,7 +33,7 @@ const { Content } = await author.render();
       <ContentHeader title={title} />
 
       <Social source={social} class="social-icons-simple" />
-      <div class="content">
+      <div>
         <Content />
       </div>
     </div>
