--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -87,7 +87,7 @@ const authors = await getAuthorsByPost(post);
       </div>
 
       <div class="md:col-10">
-        <div class="content mb-16 text-left">
+        <div class="mb-16 text-left">
           <Content />
         </div>
         <div class="flex flex-wrap items-center justify-between">
