--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -49,22 +49,21 @@ const what_i_do = {
             </div>
           )}
         </div>
-        <div class="sm:col-7 md:col-8">
+        <div class="prose sm:col-7 md:col-8">
           <h1 transition:animate="slide" set:html={markdownify(title)} class="text-2xl md:text-3xl font-bold mb-8" />
 
-          <div class="content">
-            <p>
-              A content writer with over 12 years experience working across
-              brand identity, publishing and digital products. Maecenas sit
-              amet purus eget ipsum elementum venenatis. Aenean maximus urna
-              magna elementum venenatis quis non purus.
-            </p>
-            <p>
-              Purus eget ipsum elementum venenatis. Aenean maximus urna magna
-              elementum venenatis, quis rutrum mi semper non purus eget ipsum
-              elementum venenatis, aenean maximus urna magna elementum.
-            </p>
-          </div>
+          <p>
+            A content writer with over 12 years experience working across
+            brand identity, publishing and digital products. Maecenas sit
+            amet purus eget ipsum elementum venenatis. Aenean maximus urna
+            magna elementum venenatis quis non purus.
+          </p>
+          <p>
+            Purus eget ipsum elementum venenatis. Aenean maximus urna magna
+            elementum venenatis, quis rutrum mi semper non purus eget ipsum
+            elementum venenatis, aenean maximus urna magna elementum.
+          </p>
+
           <a href="/contact" class="btn btn-primary inline-block rounded-lg border font-semibold transition bg-primary text-white mt-2 mb-5 px-6 py-3">Get In Touch</a>
         </div>
       </div>
