--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -64,7 +64,7 @@ const what_i_do = {
             elementum venenatis, aenean maximus urna magna elementum.
           </p>
 
-          <a href="/contact" class="btn btn-primary inline-block rounded-lg border font-semibold transition bg-primary text-white mt-2 mb-5 px-6 py-3">Get In Touch</a>
+          <a href="/contact/" class="btn btn-primary inline-block rounded-lg no-underline border font-semibold transition bg-primary text-white mt-2 px-6 py-3">Get In Touch</a>
         </div>
       </div>
     </div>
