--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,10 +41,8 @@ const what_i_do = {
             <div class="mb-8">
               <Image
                 src={author}
-                width={295}
-                height={395}
                 alt={title}
-                class="object-cover rounded-lg w-full"
+                class="object-cover rounded-lg"
               />
             </div>
           )}
