--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -47,7 +47,7 @@ const { address, email, phone } = config.contactinfo;
           </ul>
         </div>
         <div class="sm:col-7 md:col-8">
-          <form class="contact-form row gy-2 justify-center" method="POST" action={contact_form_action}>
+          <form class="row gy-2 justify-center" method="POST" action={contact_form_action}>
             <div class="lg:col-6">
               <label class="mb-2 block" for="name">Name <span class="text-red-600">*</span></label>
               <input class="form-input w-full" name="name" type="text" required />
@@ -66,7 +66,7 @@ const { address, email, phone } = config.contactinfo;
             </div>
             <div class="col-12">
               <label class="mb-2 block" for="message">Message <span class="text-red-600">*</span></label>
-              <textarea class="form-textarea w-full" rows="4"></textarea>
+              <textarea class="form-textarea w-full" rows="4" required></textarea>
             </div>
             <div class="col-12">
               <button class="btn btn-primary inline-block rounded-lg border font-semibold transition bg-primary text-white mt-2 px-6 py-3">Submit Now</button>
