--- a/src/components/Authors.astro
+++ b/src/components/Authors.astro
@@ -28,12 +28,12 @@ const { authors } = Astro.props;
           </div>
         )}
         <h3 class="text-2xl md:text-3xl font-bold mt-8 mb-3">
-          <a href={`/authors/${author.slug}`} class="block hover:text-primary transition duration-200">
+          <a href={`/authors/${author.slug}/`} class="block hover:text-primary transition duration-200">
             {author.data.title}
           </a>
         </h3>
         <p class="mb-3" set:html={markdownify(author.body.slice(0, 100))} />
-        <a href={`/authors/${author.slug}`} class="inline-flex items-center text-primary transition duration-200 hover:opacity-70">
+        <a href={`/authors/${author.slug}/`} class="inline-flex items-center text-primary transition duration-200 hover:opacity-70">
           Read More <BsArrowRightCircle className="inline ml-2" />
         </a>
       </div>
