--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -33,7 +33,7 @@ const authors = await getAuthorsByPost(post);
             {
               authors.map(author => (
                 <a
-                  href={`/authors/${author.slug}`}
+                  href={`/authors/${author.slug}/`}
                   class="flex items-center hover:text-primary"
                 >
                   {author.data.image && (
@@ -61,7 +61,7 @@ const authors = await getAuthorsByPost(post);
                 categories.map((category: string, i: number) => (
                   <li class="inline-block">
                     <a
-                      href={`/categories/${slugify(category)}`}
+                      href={`/categories/${slugify(category)}/`}
                       class="mr-2 hover:text-primary"
                     >
                       {humanize(category)}{i !== post.data.categories.length - 1 && ','}
@@ -96,7 +96,7 @@ const authors = await getAuthorsByPost(post);
               tags.map((tag: string) => (
                 <li class="inline-block">
                   <a
-                    href={`/tags/${slugify(tag)}`}
+                    href={`/tags/${slugify(tag)}/`}
                     class="block rounded-lg bg-theme-light px-4 py-2 font-semibold text-dark text-sm hover:text-primary transition duration-300"
                   >
                     #{humanize(tag)}
