--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -18,7 +18,7 @@ const tags = await getAllPostTags();
           tags.map(tag => (
             <li class="inline-block">
               <a
-                href={`/tags/${tag}`}
+                href={`/tags/${tag}/`}
                 class="rounded-lg bg-theme-light px-4 py-2 text-dark transition hover:bg-primary hover:text-white flex items-center group"
               >
                 <FaHashtag className="mr-1 text-primary group-hover:text-white transition" />
