--- a/src/lib/contentParser.astro
+++ b/src/lib/contentParser.astro
@@ -1,9 +1,15 @@
 ---
-import { getCollection } from "astro:content";
+import {
+  getCollection,
+  type CollectionEntry,
+  type CollectionKey,
+} from "astro:content";
 
-export const getSinglePage = async (collection: any) => {
-  const allPage = await getCollection(collection);
-  const removeIndex = allPage.filter((data) => data.id.match(/^(?!-)/));
+export const getSinglePage = async <C extends CollectionKey>(
+  collectionName: C,
+): Promise<CollectionEntry<C>[]> => {
+  const allPages = await getCollection(collectionName);
+  const removeIndex = allPages.filter((data) => data.id.match(/^(?!-)/));
   const removeDrafts = removeIndex.filter((data) => !data.data.draft);
   return removeDrafts;
 };
