--- a/src/pages/[regular].astro
+++ b/src/pages/[regular].astro
@@ -1,10 +1,11 @@
 ---
-import Base from "@layouts/Base.astro";
-import Default from "@layouts/Default.astro";
-import PostSingle from "@layouts/PostSingle.astro";
-import { getSinglePage } from "@lib/contentParser.astro";
+import Base from "@/layouts/Base.astro";
+import Default from "@/layouts/Default.astro";
+import PostSingle from "@/layouts/PostSingle.astro";
+import { getSinglePage } from "@/lib/contentParser.astro";
+import type { TPost } from "@/types";
 
-const getPosts = await getSinglePage("posts");
+const getPosts = (await getSinglePage("posts")) as TPost[];
 const postsSlug = getPosts.map((item) => item.slug);
 
 export async function getStaticPaths() {
@@ -12,7 +13,7 @@ export async function getStaticPaths() {
   const pages = await getSinglePage("pages");
   const allPages = [...pages, ...posts];
 
-  const paths = allPages.map((page) => ({
+  const paths = allPages.map((page: any) => ({
     params: {
       regular: page.slug,
     },
