--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -1,11 +1,11 @@
 ---
-import Base from "@layouts/Base.astro";
-import { getTaxonomy } from "@lib/taxonomyParser.astro";
-import { humanize } from "@lib/utils/textConverter";
+import Base from "@/layouts/Base.astro";
+import { getTaxonomy } from "@/lib/taxonomyParser.astro";
+import { humanize } from "@/lib/utils/textConverter";
 
 const categories = await getTaxonomy("posts", "categories");
 
-import { BiCategoryAlt } from "react-icons/bi/index.js";
+import { BiCategoryAlt } from "react-icons/bi";
 ---
 
 <Base title={"Categories"}>
