--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,13 +1,13 @@
 ---
-import Base from "@layouts/Base.astro";
-import Search from "@layouts/Search";
-import { getSinglePage } from "@lib/contentParser.astro";
+import Base from "@/layouts/Base.astro";
+import SearchBar from "@/layouts/SearchBar";
+import { getSinglePage } from "@/lib/contentParser.astro";
 
 // Retrieve all articles
 const posts = await getSinglePage("posts");
 
 // List of items to search in
-const searchList = posts.map((item) => ({
+const searchList = posts.map((item: any) => ({
   slug: item.slug,
   data: item.data,
   content: item.body,
@@ -17,7 +17,7 @@ const searchList = posts.map((item) => ({
 <Base title={`Search`}>
   <section class="section">
     <div class="container">
-      <Search client:load searchList={searchList} />
+      <SearchBar client:load searchList={searchList} />
     </div>
   </section>
 </Base>
