--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -1,10 +1,10 @@
 ---
-import { Image } from "@astrojs/image/components";
-import config from "@config/config.json";
-import { getSinglePage } from "@lib/contentParser.astro";
-import dateFormat from "@lib/utils/dateFormat";
-import { humanize,slugify } from "@lib/utils/textConverter";
-import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi/index.js";
+import { Image } from "astro:assets";
+import config from "@/config/config.json";
+import { getSinglePage } from "@/lib/contentParser.astro";
+import dateFormat from "@/lib/utils/dateFormat";
+import { humanize,slugify } from "@/lib/utils/textConverter";
+import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi";
 const authors = await getSinglePage("authors");
 const { summary_length } = config.settings;
 const { className, posts, fluid } = Astro.props;
