--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -1,7 +1,7 @@
 ---
-import Logo from "@components/Logo.astro";
-import menu from "@config/menu.json";
-import { IoSearch } from "react-icons/io5/index.js";
+import Logo from "@/components/Logo.astro";
+import menu from "@/config/menu.json";
+import { IoSearch } from "react-icons/io5";
 
 export interface ChildNavigationLink {
   name: string;
