--- a/src/pages/authors/page/[slug].astro
+++ b/src/pages/authors/page/[slug].astro
@@ -1,11 +1,11 @@
 ---
-import config from "@config/config.json";
-import Authors from "@layouts/Authors.astro";
-import Base from "@layouts/Base.astro";
-import Pagination from "@layouts/components/Pagination.astro";
-import { getSinglePage } from "@lib/contentParser.astro";
-import { sortByDate } from "@lib/utils/sortFunctions";
-import { markdownify } from "@lib/utils/textConverter";
+import config from "@/config/config.json";
+import Authors from "@/layouts/Authors.astro";
+import Base from "@/layouts/Base.astro";
+import Pagination from "@/layouts/components/Pagination.astro";
+import { getSinglePage } from "@/lib/contentParser.astro";
+import { sortByDate } from "@/lib/utils/sortFunctions";
+import { markdownify } from "@/lib/utils/textConverter";
 
 export async function getStaticPaths() {
   const authors = await getSinglePage("authors");
