--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -57,3 +57,15 @@ input#nav-toggle:checked ~ #nav-menu {
     @apply visible opacity-100;
   }
 }
+
+.navbar-bran {
+  width: 200px;
+}
+
+.navbar{
+  .ml-auto {
+    width: 200px;
+    display: flex;
+    justify-content: flex-end;
+  }
+}
