--- a/src/pages/categories/[category].astro
+++ b/src/pages/categories/[category].astro
@@ -3,6 +3,7 @@ import Base from "@/layouts/Base.astro";
 import Posts from "@/layouts/Posts.astro";
 import { getSinglePage } from "@/lib/contentParser.astro";
 import { getTaxonomy } from "@/lib/taxonomyParser.astro";
+import { sortByDate } from "@/lib/utils/sortFunctions";
 import taxonomyFilter from "@/lib/utils/taxonomyFilter";
 import { humanize } from "@/lib/utils/textConverter";
 
@@ -20,6 +21,7 @@ const { category } = Astro.params;
 
 const posts = await getSinglePage("posts");
 const filterByCategory = taxonomyFilter(posts, "categories", category);
+const sortedPosts = sortByDate(filterByCategory);
 
 const title = humanize(category || "");
 ---
@@ -27,9 +29,9 @@ const title = humanize(category || "");
 <Base title={title || "Category"}>
   <div class="section">
     <div class="container">
-      <p class="text-center mb-4">Showing Posts From</p>
+      <p class="text-center text-2xl mb-4">Showing Posts From</p>
       <h1 class="h2 mb-16 text-center text-primary">{title}</h1>
-      <Posts posts={filterByCategory} fluid={false} />
+      <Posts posts={sortedPosts} fluid={false} />
     </div>
   </div>
 </Base>
