--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -3,19 +3,24 @@ import { Image } from "astro:assets";
 import config from "@/config/config.json";
 import { getSinglePage } from "@/lib/contentParser.astro";
 import dateFormat from "@/lib/utils/dateFormat";
-import { humanize,slugify } from "@/lib/utils/textConverter";
-import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi";
+import { humanize, plainify, slugify } from "@/lib/utils/textConverter";
+import { BiCalendarEdit, BiCategoryAlt } from "react-icons/bi";
 const authors = await getSinglePage("authors");
 const { summary_length } = config.settings;
 const { className, posts, fluid } = Astro.props;
 ---
 
-<div class={`row gy-5 gx-4 ${className} ${posts.length == 1 ? "justify-center" : ""} `}>
+<div
+  class={`row gy-5 gx-4 ${className} ${posts.length == 1 ? "justify-center" : ""} `}
+>
   {
     posts.map((post: any, i: number) => (
       <div class={i === 0 && fluid != false ? "col-12" : "col-12 sm:col-6"}>
         {post.data.image && (
-          <a href={`/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
+          <a
+            href={`/${post.slug}`}
+            class="rounded-lg block hover:text-primary overflow-hidden group"
+          >
             <Image
               class="group-hover:scale-[1.03] transition duration-300 w-full"
               src={post.data.image}
@@ -65,7 +70,8 @@ const { className, posts, fluid } = Astro.props;
                       href={`/categories/${slugify(category)}`}
                       class="mr-2 hover:text-primary font-medium"
                     >
-                      {humanize(category)}{i !== post.data.categories.length - 1 && ","}
+                      {humanize(category)}
+                      {i !== post.data.categories.length - 1 && ","}
                     </a>
                   </li>
                 ))}
@@ -74,12 +80,23 @@ const { className, posts, fluid } = Astro.props;
           </li>
         </ul>
         <h3 class="mb-4">
-          <a href={`/${post.slug}`} class="block hover:text-primary transition duration-300">
+          <a
+            href={`/${post.slug}`}
+            class="block hover:text-primary transition duration-300"
+          >
             {post.data.title}
           </a>
         </h3>
         <p class="text-text">
-          {post.body?.slice(0, Number(i === 0 && fluid != false ? summary_length * 2 : summary_length))}...
+          {plainify(
+            post.body?.slice(
+              0,
+              Number(
+                i === 0 && fluid != false ? summary_length * 2 : summary_length
+              )
+            )
+          )}
+          ...
         </p>
       </div>
     ))
