Enable sitemap discovery by default.

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -171,6 +171,8 @@ const { title, meta_title, description, image, noindex, canonical } =
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Rss feed -->
     <link rel="alternate" type="application/rss+xml" title={`${config.site.title}`} href={`${social.rss}`} />
+    <!-- sitemap -->
+    <link rel="sitemap" href={`${config.site.sitemap}`} />
   </head>
   <body>
     <TwSizeIndicator />
