traduções e customizações prontas

--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -58,7 +58,7 @@ const { className, posts, fluid } = Astro.props;
           </li>
           <li class="mr-5 flex items-center flex-wrap font-medium">
             <BiCalendarEdit className="mr-1 h-5 w-5 text-gray-600" />
-            <>{dateFormat(post.data.date)}</>
+            <>{dateFormat(post.data.date, "dd 'de' MMMM 'de' yyyy")}</>
           </li>
           <li class="mr-5 flex items-center flex-wrap">
             <BiCategoryAlt className="mr-1 h-[18px] w-[18px] text-gray-600" />
