--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -1,5 +1,4 @@
 ---
-import Logo from "@/components/Logo.astro";
 import menu from "@/config/menu.json";
 import { IoSearch } from "react-icons/io5";
 
@@ -22,7 +21,8 @@ const { main }: { main: NavigationLink[] } = menu;
   <nav class="navbar container">
     <!-- logo -->
     <div class="order-0">
-      <Logo />
+      <!-- <Logo /> -->
+      <h1 class="text-2xl">Arthur V. M. Dantas</h1>
     </div>
     <!-- navbar toggler -->
     <input id="nav-toggle" type="checkbox" class="hidden" />
