--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,9 +2,9 @@
 import { Image } from "astro:assets";
 import Base from "@/layouts/Base.astro";
 import { markdownify } from "@/lib/utils/textConverter";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 
-const entry = await getEntryBySlug("about", "index");
+const entry = await getEntry("about", "index");
 const { Content } = await entry.render();
 const { title, description, meta_title, image, what_i_do } = entry.data;
 ---
@@ -39,15 +39,15 @@ const { title, description, meta_title, image, what_i_do } = entry.data;
           <div class="content">
             <Content />
           </div>
-          <a href="/contact" class="btn btn-primary text-white py-2"
+          <!-- <a href="/contact" class="btn btn-primary text-white py-2"
             >Get In Touch</a
-          >
+          > -->
         </div>
       </div>
     </div>
   </section>
 
-  <section class="section pt-0">
+  <!-- <section class="section pt-0">
     <div class="container">
       <h3 class="page-heading mb-20">{what_i_do.title}</h3>
       <div class="row justify-center gy-4 text-center">
@@ -62,5 +62,5 @@ const { title, description, meta_title, image, what_i_do } = entry.data;
         }
       </div>
     </div>
-  </section>
+  </section> -->
 </Base>
