--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -8,10 +8,10 @@ const categories = await getTaxonomy("posts", "categories");
 import { BiCategoryAlt } from "react-icons/bi";
 ---
 
-<Base title={"Categories"}>
+<Base title={"Categorias"}>
   <section class="section">
     <div class="container text-center">
-      <h1 class="h2 page-heading">Categories</h1>
+      <h1 class="h2 page-heading">Categorias</h1>
       <ul class="space-x-4">
         {
           categories.map((category) => (
