--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -11,9 +11,12 @@ import { markdownify } from "@/lib/utils/textConverter";
     {/* footer menu */}
     <ul class="mb-8 space-x-4">
       {
-        menu.footer.map((menu) => (
+        menu.footer.map((menu: { name: string; url: string }) => (
           <li class="inline-block">
-            <a href={menu.url} class="p-4 text-white/75 hover:text-white transition-all">
+            <a
+              href={menu.url}
+              class="p-4 text-white/75 hover:text-white transition-all"
+            >
               {menu.name}
             </a>
           </li>
@@ -24,5 +27,9 @@ import { markdownify } from "@/lib/utils/textConverter";
     <Social source={social} className="social-icons mb-8" />
     {/* copyright */}
     <p set:html={markdownify(config.params.copyright)} class="text-white/75" />
+    <p
+      set:html={markdownify(config.params.theme_credit)}
+      class="text-white/75"
+    />
   </div>
 </footer>
