--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,9 @@
 ---
 import Base from "@/layouts/Base.astro";
 import { markdownify } from "@/lib/utils/textConverter";
-import { getEntryBySlug } from "astro:content";
-const entry = await getEntryBySlug("pages", "404");
+import { getEntry } from "astro:content";
+
+const entry = await getEntry("pages", "404");
 const { Content } = await entry.render();
 ---
 
