use metadata (abstract or description)
instead of using the post content as its "abstract", use its metadata (abstract if available or description if not)

--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -88,15 +88,16 @@ const { className, posts, fluid } = Astro.props;
           </a>
         </h3>
         <p class="text-text">
-          {plainify(
+          {post.data.abstract || post.data.description}
+          {/* {plainify(
             post.body?.slice(
               0,
               Number(
                 i === 0 && fluid != false ? summary_length * 2 : summary_length
               )
             )
-          )}
-          ...
+          )} */}
+          {/* ... */}
         </p>
       </div>
     ))
