--- a/src/layouts/PostSingle.astro
+++ b/src/layouts/PostSingle.astro
@@ -127,7 +127,7 @@ const { title, description, authors, categories, image, date, tags } =
   similarPosts.length > 0 && (
     <section class="section pt-0">
       <div class="container">
-        <h2 class="mb-8 text-center h3">Similar Posts</h2>
+        <h2 class="mb-8 text-center h3">Posts Similares</h2>
         <SimilarPosts posts={similarPosts.slice(0, 3)} />
       </div>
     </section>
